--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(41,38,36);
+  background: radial-gradient(circle, rgba(41,38,36,1) 0%, rgba(23,21,19,1) 73%);
+  height: 90vh;
 }
 
 code {
