--- a/src/components/activity/activity.scss
+++ b/src/components/activity/activity.scss
@@ -5,6 +5,8 @@
   border-radius: 50%;
   display: flex;
   flex-direction: row-reverse;
+  background-position: center;
+  background-size: cover;
   .status {
     margin-top: -4px;
     margin-right: -4px;
