--- a/src/components/visual-profile/visual-profile.scss
+++ b/src/components/visual-profile/visual-profile.scss
@@ -62,6 +62,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      cursor: pointer;
       @media only screen and (max-width: 768px) {
         /* For mobile phones: */
         height: 120px;
@@ -70,9 +71,9 @@
       }
       &.flat {
         height: 55px;
-        width: 180px;
+        width: 190px;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: flex-start;
         align-items: flex-start;
         @media only screen and (max-width: 768px) {
           /* For mobile phones: */
@@ -95,11 +96,11 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        // @media only screen and (max-width: 768px) {
-        //   /* For mobile phones: */
-        //   flex-direction: column;
-        //   align-items: flex-start;
-        // }
+        margin-left: 20px;
+        @media only screen and (max-width: 768px) {
+          /* For mobile phones: */
+          margin-left: 0px;
+        }
       }
       .card-title {
         margin: 5px 0;
