--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,14 @@
   color: white;
   height: 100vh;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   text-align: center;
+  padding: 0 8%;
   @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     justify-content: flex-start;
     flex-direction: column;
+    padding: 10px 0;
   }
 }
