--- a/src/components/visual-profile/visual-profile.scss
+++ b/src/components/visual-profile/visual-profile.scss
@@ -12,12 +12,23 @@
     /* For mobile phones: */
     margin-top: 80px;
   }
+  .bgimage{
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    z-index: 1;
+    @media only screen and (max-width: 768px) {
+      /* For mobile phones: */
+    }
+  }
   .year {
     margin: 0;
+    position: absolute;
     margin-top: -130px;
     font-size: 150px;
     opacity: 0.1;
-    z-index: -2;
     animation: shake 5s;
     animation-iteration-count: infinite;
     @media only screen and (max-width: 768px) {
@@ -26,6 +37,10 @@
       margin-bottom: -40px;
       font-size: 100px;
     }
+    &.darkmodefont{
+      color: black;
+      opacity: 0.3;
+    }
   }
   @media only screen and (max-width: 768px) {
     /* For mobile phones: */
@@ -33,20 +48,23 @@
     width: 270px;
   }
   .top-lable {
+    position: absolute;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    width: 135%;
-    margin-top: -10%;
+    width: 607px;
+    z-index: 2;
+    margin-top: 120px;
     @media only screen and (max-width: 768px) {
       /* For mobile phones: */
+      position: relative;
       width: 100%;
-      margin-top: 85%;
+      margin-top: -20%;
     }
     &.down {
-      margin-bottom: 7%;
-      margin-left: 30%;
+      margin-left: 9%;
+      margin-top: 340px;
       justify-content: center;
       @media only screen and (max-width: 768px) {
         /* For mobile phones: */
@@ -55,6 +73,7 @@
       }
     }
     .current-job {
+      // position: absolute;
       height: 140px;
       width: 120px;
       border-radius: 15px;
@@ -104,6 +123,11 @@
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
+      }
+      &.darkmodecard {
+        color: black;
+        background: rgba(255, 255, 255, 0.767);
+        backdrop-filter: blur(10px);
       }
       .flat-con {
         display: flex;
